[gd_scene load_steps=11 format=3 uid="uid://bhmp703q6mbb3"]

[ext_resource type="Texture2D" uid="uid://xlteh8jgne4l" path="res://assets/ranking.png" id="1_uncqw"]
[ext_resource type="Texture2D" uid="uid://g57qa344iktt" path="res://assets/Home.png" id="2_5fyty"]
[ext_resource type="Script" uid="uid://c2xdwenux1pmq" path="res://scenes/MultplayerMenu.gd" id="3_0apv6"]
[ext_resource type="Texture2D" uid="uid://csr5oyoslxsmv" path="res://assets/play.png" id="3_jxctm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pkngn"]
texture = ExtResource("2_5fyty")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ov45x"]
texture = ExtResource("2_5fyty")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3ttlq"]
texture = ExtResource("2_5fyty")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ime25"]
texture = ExtResource("3_jxctm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fk4vn"]
texture = ExtResource("3_jxctm")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kjxlr"]
texture = ExtResource("3_jxctm")

[node name="MultplayerMenu" type="Node2D"]
script = ExtResource("3_0apv6")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 1
z_as_relative = false
position = Vector2(429, 470)
scale = Vector2(1.1224, 1.0787)
texture = ExtResource("1_uncqw")

[node name="ExitButton" type="Button" parent="."]
z_index = 1
offset_left = 391.0
offset_top = 444.0
offset_right = 516.0
offset_bottom = 494.0
theme_override_styles/hover = SubResource("StyleBoxTexture_pkngn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ov45x")
theme_override_styles/normal = SubResource("StyleBoxTexture_3ttlq")

[node name="PlayButton" type="Button" parent="."]
z_index = 1
offset_left = 384.0
offset_top = 163.0
offset_right = 509.0
offset_bottom = 213.0
theme_override_styles/hover = SubResource("StyleBoxTexture_ime25")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fk4vn")
theme_override_styles/normal = SubResource("StyleBoxTexture_kjxlr")

[node name="MultplayerHUD" type="Control" parent="."]
unique_name_in_owner = true
z_index = 1
layout_mode = 3
anchors_preset = 0
offset_left = 390.0
offset_top = 300.0
offset_right = 390.0
offset_bottom = 300.0

[node name="Controls" type="Panel" parent="MultplayerHUD"]
z_index = 1
layout_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MultplayerHUD/Controls"]
z_index = 1
layout_mode = 0
offset_right = 110.0
offset_bottom = 35.0

[node name="HostGame" type="Button" parent="MultplayerHUD/Controls/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinAsPlayer2" type="Button" parent="MultplayerHUD/Controls/VBoxContainer"]
layout_mode = 2
text = "Join"

[node name="JoinMenu" type="VBoxContainer" parent="MultplayerHUD"]
layout_mode = 0
offset_left = -33.0
offset_top = -27.0
offset_right = 137.0
offset_bottom = 96.0

[node name="IPInput" type="LineEdit" parent="MultplayerHUD/JoinMenu"]
layout_mode = 2

[node name="StatusLabel" type="RichTextLabel" parent="MultplayerHUD/JoinMenu"]
layout_mode = 2

[node name="ConnectButton" type="Button" parent="MultplayerHUD/JoinMenu"]
layout_mode = 2
text = "Join
"

[connection signal="pressed" from="MultplayerHUD/Controls/VBoxContainer/HostGame" to="." method="become_host"]
[connection signal="pressed" from="MultplayerHUD/Controls/VBoxContainer/JoinAsPlayer2" to="." method="join_as_player_2"]
[connection signal="pressed" from="MultplayerHUD/JoinMenu/ConnectButton" to="." method="_on_connect_pressed"]
